--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="app">
         <!--Navbar -->
         <nav class="mb-1 navbar navbar-dark  teal darken-1 sticky-top" style="height: 45px !important; padding-left: 10px !important; padding-top: 0px;">
-            <a class="navbar-brand p-0 m-0" href="/" >
+            <a class="navbar-brand p-0 m-0" href="https://cursos-guss.herokuapp.com/signin" >
                 cursosmovil.com
             </a>
             <div>
