--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <link href="css/style.css" rel="stylesheet" />
     <link rel="icon" href="cursosmovil-icon.ico" />
 
-    
+    <meta property="og:title" content="cursosmovil.com" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://www.cursosmovil.com" />
+    <meta property="og:image:url" content="cursosmovil-logo.png" />
+    <meta property="og:description" content="Curso Virtual" />
 
     
     <style></style>
