--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <link rel="icon" href="cursosmovil-icon.ico" />
 
     <meta property="og:title" content="cursosmovil.com" />
-    <meta property="og:type" content="article" />
+    <meta property="og:type" content="app" />
     <meta property="og:url" content="https://www.cursosmovil.com" />
     <meta property="og:image:url" content="cursosmovil-logo.png" />
-    <meta property="og:description" content="Curso Virtual" />
+    <meta property="og:description" content="App para crear cursos online y administrar alumnos, también enviar trabajos y poder visualizarlos en la computadora, poner comentarios, observaciones, realizar preguntas y mucho más...
+    " />
 
     
     <style></style>
