--- a/index.html
+++ b/index.html
@@ -143,9 +143,7 @@
         <div class="view">
 
           <!--Video source-->
-          <div class="teal" style="width: 100%; height: 100%;">
-
-        </div>
+          <img src="fondoA.png" width="100%" alt="">
 
           <!-- Mask & flexbox options-->
           <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
@@ -246,7 +244,7 @@
           <!--Grid column-->
           <div class="col-md-6 mb-4">
 
-            <img src="https://mdbootstrap.com/img/Marketing/mdb-press-pack/mdb-main.jpg" class="img-fluid z-depth-1-half" alt="">
+            <img src="fondoA.png" class="img-fluid z-depth-1-half" alt="">
 
           </div>
           <!--Grid column-->
