cambios al texto

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       <!--Section: Main features & Quick Start-->
       <section>
 
-        <h3 class="h3 text-center mb-5">About MDB</h3>
+        <h3 class="h3 text-center mb-5">Sobre cursosmovil</h3>
 
         <!--Grid row-->
         <div class="row wow fadeIn">
@@ -304,8 +304,8 @@
                 <i class="fas fa-code fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h5 class="feature-title">Bootstrap 4</h5>
-                <p class="grey-text">Thanks to MDB you can take advantage of all feature of newest Bootstrap 4.</p>
+                <h5 class="feature-title">cursosmovil.com</h5>
+                <p class="grey-text">Gracias por escoger cursosmovil.com como tu plataforma de cursos virtuales</p>
               </div>
             </div>
             <!--/First row-->
@@ -318,9 +318,9 @@
                 <i class="fas fa-book fa-2x blue-text"></i>
               </div>
               <div class="col-10">
-                <h5 class="feature-title">Detailed documentation</h5>
-                <p class="grey-text">We give you detailed user-friendly documentation at your disposal. It will help you to implement your ideas
-                  easily.
+                <h5 class="feature-title">Detalles</h5>
+                <p class="grey-text">Conseguirás nuevas formas de enzeñar y mejorar tu habilidad de docente incluso verlo desde
+                    la perspectiva de un alumno
                 </p>
               </div>
             </div>
@@ -334,9 +334,8 @@
                 <i class="fas fa-graduation-cap fa-2x cyan-text"></i>
               </div>
               <div class="col-10">
-                <h5 class="feature-title">Lots of tutorials</h5>
-                <p class="grey-text">We care about the development of our users. We have prepared numerous tutorials, which allow you to learn
-                  how to use MDB as well as other technologies.</p>
+                <h5 class="feature-title">Tutorial</h5>
+                <p class="grey-text">Comienza ahora mismo es muy sensillo tanto para tí como para tus estudiantes.</p>
               </div>
             </div>
             <!--/Third row-->
@@ -365,7 +364,7 @@
       <!--Section: Not enough-->
       <section>
 
-        <h2 class="my-5 h3 text-center">Not enough?</h2>
+        <h2 class="my-5 h3 text-center">Versión Beta</h2>
 
         <!--First row-->
         <div class="row features-small mb-5 mt-3 wow fadeIn">
@@ -378,8 +377,9 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">Free for personal and commercial use</h6>
-                <p class="grey-text">Our license is user-friendly. Feel free to use MDB for both private as well as commercial projects.
+                <h6 class="feature-title">Gratis por ser la versión Beta</h6>
+                <p class="grey-text">Mantén tus recursos y posibilidades de forma totalmente Gratis
+                    por ser de los primeros en usar esta plataforma.
                 </p>
                 <div style="height:15px"></div>
               </div>
