--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
           <!--Video source-->
           
-          <img src="fondo5.jpg" height="100%" alt="">
+          <img src="fondo5.jpg" class=" mx-auto" height="100%" alt="">
 
           <!-- Mask & flexbox options-->
           <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
@@ -143,7 +143,7 @@
         <div class="view">
 
           <!--Video source-->
-          <img src="fondoA.png" width="100%" alt="">
+          <img  src="fondoA.png"  class="img-fluid mx-auto" alt="Responsive image">
 
           <!-- Mask & flexbox options-->
           <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
@@ -253,28 +253,28 @@
           <div class="col-md-6 mb-4">
 
             <!-- Main heading -->
-            <h3 class="h3 mb-3">Material Design for Bootstrap</h3>
-            <p>This template is created with Material Design for Bootstrap (
-              <strong>MDB</strong> ) framework.</p>
-            <p>Read details below to learn more about MDB.</p>
+            <h3 class="h3 mb-3">PLataforma para cursos virtuales</h3>
+            <p>La mejor forma de crear cursos de forma sensilla (
+              <strong>cursosmovil</strong> ) app.web.</p>
+            <p>Lee con mas detenimiento sobre la versión Beta.</p>
             <!-- Main heading -->
 
             <hr>
 
             <p>
-              <strong>400+</strong> material UI elements,
-              <strong>600+</strong> material icons,
-              <strong>74</strong> CSS animations, SASS files, templates, tutorials and many more.
-              <strong>Free for personal and commercial use.</strong>
+              <strong></strong> Crea fichas de preguntas,
+              <strong></strong> Crea lecciones,
+              <strong></strong> Crea tareas, tus alumnos podrán enviarte sus trabajos y con un proyector podrás revisarlos en el aula.
+              <strong>Puedes tu administrar tus alumnos y cobrar si tu lo decides.</strong>
             </p>
 
             <!-- CTA -->
-            <a target="_blank" href="https://mdbootstrap.com/docs/jquery/getting-started/download/" class="btn btn-grey btn-md">Download
+            <!-- <a target="_blank" href="https://mdbootstrap.com/docs/jquery/getting-started/download/" class="btn btn-grey btn-md">Download
               <i class="fas fa-download ml-1"></i>
             </a>
             <a target="_blank" href="https://mdbootstrap.com/docs/jquery/components/" class="btn btn-grey btn-md">Live demo
               <i class="far fa-image ml-1"></i>
-            </a>
+            </a> -->
 
           </div>
           <!--Grid column-->
@@ -346,10 +346,10 @@
           <!--Grid column-->
           <div class="col-lg-6 col-md-12">
 
-            <p class="h5 text-center mb-4">Watch our "5 min Quick Start" tutorial</p>
+            <!-- <p class="h5 text-center mb-4">Watch our "5 min Quick Start" tutorial</p>
             <div class="embed-responsive embed-responsive-16by9">
               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cXTThxoywNQ" allowfullscreen></iframe>
-            </div>
+            </div> -->
           </div>
           <!--/Grid column-->
 
@@ -392,8 +392,8 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">400+ UI elements</h6>
-                <p class="grey-text">An impressive collection of flexible components allows you to develop any project.
+                <h6 class="feature-title">Organiza</h6>
+                <p class="grey-text">Organiza por materias y títulos que de forma intuitiva podrás navegar en ellos.
                 </p>
                 <div style="height:15px"></div>
               </div>
@@ -406,8 +406,8 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">600+ icons</h6>
-                <p class="grey-text">Hundreds of useful, scalable, vector icons at your disposal.</p>
+                <h6 class="feature-title">Materias</h6>
+                <p class="grey-text">Puedes crear más de una materia si así lo quieres.</p>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -419,9 +419,8 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">Fully responsive</h6>
-                <p class="grey-text">It doesn't matter whether your project will be displayed on desktop, laptop, tablet or mobile phone. MDB
-                  looks great on each screen.</p>
+                <h6 class="feature-title">Títulos</h6>
+                <p class="grey-text">Los títulos derivan de las Materias para su mejor organización, y a partir de ellos puedes crear fichas, lecciones y tareas.</p>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -443,8 +442,8 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">70+ CSS animations</h6>
-                <p class="grey-text">Neat and easy to use animations, which will increase the interactivity of your project and delight your visitors.
+                <h6 class="feature-title">Fichas de preguntas.</h6>
+                <p class="grey-text">Crea fichas de preguntas para reforzar el aprendizaje de tus cursos.
                 </p>
                 <div style="height:15px"></div>
               </div>
@@ -457,8 +456,8 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">Plenty of useful templates</h6>
-                <p class="grey-text">Need inspiration? Use one of our predefined templates for free.</p>
+                <h6 class="feature-title">Crea lecciones.</h6>
+                <p class="grey-text">Puedes crear lecciones que dejen más claro las temas mas importantes para el mejor aprendizaje.</p>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -470,8 +469,8 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">Easy installation</h6>
-                <p class="grey-text">5 minutes, a few clicks and... done. You will be surprised at how easy it is.
+                <h6 class="feature-title">Fácil instalación.</h6>
+                <p class="grey-text">Busca en la opcion de Aplicaciones en tu navegador y pon Agregar a la Pantalla Principal y listo!.
                 </p>
                 <div style="height:15px"></div>
               </div>
@@ -484,9 +483,9 @@
                 <i class="fas fa-check-circle fa-2x indigo-text"></i>
               </div>
               <div class="col-10">
-                <h6 class="feature-title">Easy to use and customize</h6>
-                <p class="grey-text">Using MDB is straightforward and pleasant. Components flexibility allows you deep customization. You will
-                  easily adjust each component to suit your needs.</p>
+                <h6 class="feature-title">Crea tareas</h6>
+                <p class="grey-text">Crea tareas que los estudiantes podrán enviarte y podrás revisarlos en casa, en la computadora, el móvil e incluso 
+                  en el aula con ayuda de un proyector.</p>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -518,8 +517,8 @@
                 <i class="fab fa-firefox fa-2x mb-1 indigo-text" aria-hidden="true"></i>
               </div>
               <div class="col-10 mb-2 pl-3">
-                <h5 class="feature-title font-bold mb-1">Cross-browser compatibility</h5>
-                <p class="grey-text mt-2">Chrome, Firefox, IE, Safari, Opera, Microsoft Edge - MDB loves all browsers; all browsers love MDB.
+                <h5 class="feature-title font-bold mb-1">Compatibilidad con todos lo navegadores modernos</h5>
+                <p class="grey-text mt-2">Chrome, Firefox, IE, Safari, Opera, Microsoft Edge.y puedes instalarlo en los PCs y Mac.
                 </p>
               </div>
             </div>
@@ -535,8 +534,8 @@
                 <i class="fas fa-level-up-alt fa-2x mb-1 indigo-text" aria-hidden="true"></i>
               </div>
               <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">Frequent updates</h5>
-                <p class="grey-text mt-2">MDB becomes better every month. We love the project and enhance as much as possible.
+                <h5 class="feature-title font-bold mb-1">Actualiazaciones</h5>
+                <p class="grey-text mt-2">cursosmovil está en su versión beta e irá mejorando.
                 </p>
               </div>
             </div>
@@ -552,8 +551,8 @@
                 <i class="fas fa-comments fa-2x mb-1 indigo-text" aria-hidden="true"></i>
               </div>
               <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">Active community</h5>
-                <p class="grey-text mt-2">Our society grows day by day. Visit our forum and check how it is to be a part of our family.
+                <h5 class="feature-title font-bold mb-1">Mensajes a tus cursos</h5>
+                <p class="grey-text mt-2">Puedes enviar mensajes a tus cursos y no preocuparte por si se pierde como en los grupos en otras aplicaciones.
                 </p>
               </div>
             </div>
@@ -569,9 +568,8 @@
                 <i class="fas fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
               </div>
               <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">jQuery 3.x</h5>
-                <p class="grey-text mt-2">MDB is integrated with newest jQuery. Therefore you can use all the latest features which come along with
-                  it.
+                <h5 class="feature-title font-bold mb-1">Sugerencias</h5>
+                <p class="grey-text mt-2">Si tienes sugenrencias contactate con el esquipo de trabajo de cursosmovil y ayudanos a mejorar la app.
                 </p>
               </div>
             </div>
@@ -593,9 +591,8 @@
                 <i class="fas fa-cubes fa-2x mb-1 indigo-text" aria-hidden="true"></i>
               </div>
               <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">Modularity</h5>
-                <p class="grey-text mt-2">Material Design for Bootstrap comes with both, compiled, ready to use libraries including all features as
-                  well as modules for CSS (SASS files) and JS.</p>
+                <h5 class="feature-title font-bold mb-1">Nuevas opciones</h5>
+                <p class="grey-text mt-2">Progresivamente se crean nuevas opciones para que puedas sacarle el mejor provecho.</p>
               </div>
             </div>
             <!--/Grid row-->
@@ -610,8 +607,8 @@
                 <i class="fas fa-question fa-2x mb-1 indigo-text" aria-hidden="true"></i>
               </div>
               <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">Technical support</h5>
-                <p class="grey-text mt-2">We care about reliability. If you have any questions - do not hesitate to contact us.
+                <h5 class="feature-title font-bold mb-1">Soporte técnico</h5>
+                <p class="grey-text mt-2">Si eres un usuario premium tiene acceso al soporte técnico.
                 </p>
               </div>
             </div>
@@ -627,8 +624,8 @@
                 <i class="fas fa-th fa-2x mb-1 indigo-text" aria-hidden="true"></i>
               </div>
               <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">Flexbox</h5>
-                <p class="grey-text mt-2">MDB fully supports Flex Box. You can forget about alignment issues.</p>
+                <h5 class="feature-title font-bold mb-1">Dispositivos móviles</h5>
+                <p class="grey-text mt-2">se puede usar en cualquier dispositivo móvil.</p>
               </div>
             </div>
             <!--/Grid row-->
@@ -640,11 +637,11 @@
             <!--Grid row-->
             <div class="row">
               <div class="col-2">
-                <i class="far fa-file-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+                <i class="fas fa-mobile-alt fa-2x mb-1 indigo-text" aria-hidden="true"></i>
               </div>
               <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">SASS files</h5>
-                <p class="grey-text mt-2">Arranged and well documented .scss files can't wait until you compile them.</p>
+                <h5 class="feature-title font-bold mb-1">Instalable</h5>
+                <p class="grey-text mt-2">Busca en la opcion de Aplicaciones en tu navegador y pon Agregar a la Pantalla Principal y listo!.</p>
               </div>
             </div>
             <!--/Grid row-->
@@ -666,9 +663,7 @@
 
     <!--Call to action-->
     <div class="pt-4">
-      <a class="btn btn-outline-white" href="https://mdbootstrap.com/docs/jquery/getting-started/download/" target="_blank" role="button">Download MDB
-        <i class="fas fa-download ml-2"></i>
-      </a>
+      
       <a  href="https://cursos-guss.herokuapp.com/" class="btn btn-outline-white btn-lg">Sé parte de la versión beta
         <i class="fas fa-graduation-cap ml-2"></i>
       </a>
@@ -679,11 +674,11 @@
 
     <!-- Social icons -->
     <div class="pb-4">
-      <a href="https://www.facebook.com/mdbootstrap" target="_blank">
+      <a href="https://www.facebook.com/Cursosmovilcom-108759444054160" target="_blank">
         <i class="fab fa-facebook-f mr-3"></i>
       </a>
 
-      <a href="https://twitter.com/MDBootstrap" target="_blank">
+      <!-- <a href="https://twitter.com/MDBootstrap" target="_blank">
         <i class="fab fa-twitter mr-3"></i>
       </a>
 
@@ -709,14 +704,14 @@
 
       <a href="http://codepen.io/mdbootstrap/" target="_blank">
         <i class="fab fa-codepen mr-3"></i>
-      </a>
+      </a> -->
     </div>
     <!-- Social icons -->
 
     <!--Copyright-->
     <div class="footer-copyright py-3">
-      © 2019 Copyright:
-      <a href="https://mdbootstrap.com/education/bootstrap/" target="_blank"> MDBootstrap.com </a>
+      © 2020 Copyright:
+      <a href="https://www.cursosmovil.com" target="_blank"> cursosmovil.com </a>
     </div>
     <!--/.Copyright-->
 
