--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="view">
 
           <!--Video source-->
-          <img  src="fondoA.png"  class="img-fluid mx-auto" alt="Responsive image">
+          <img  src="fondoA.png"  class=" mx-auto" height="100%" alt="Responsive image">
 
           <!-- Mask & flexbox options-->
           <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
