--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <strong>La mejor forma de complementar tu aprendizaje y enseñanza de forma práctica.</strong>
               </p>
 
-              <a  href="https://cursos-guss.herokuapp.com/" class="btn btn-outline-white btn-lg">Sé parte de la versión beta
+              <a  href="https://cursosmovil.herokuapp.com/" class="btn btn-outline-white btn-lg">Sé parte de la versión beta
                 <i class="fas fa-graduation-cap ml-2"></i>
               </a>
             </div>
@@ -162,7 +162,7 @@
                 <strong>Sistema de fichas y tareas</strong>
               </p>
 
-              <a  href="https://cursos-guss.herokuapp.com/" class="btn btn-outline-white btn-lg">Sé parte de la versión beta
+              <a  href="https://cursosmovil.herokuapp.com/" class="btn btn-outline-white btn-lg">Sé parte de la versión beta
                 <i class="fas fa-graduation-cap ml-2"></i>
               </a>
             </div>
@@ -201,7 +201,7 @@
                 <strong>Optimizada para dispositivos móviles</strong>
               </p>
 
-              <a  href="https://cursos-guss.herokuapp.com/" class="btn btn-outline-white btn-lg">Sé parte de la versión beta
+              <a  href="https://cursosmovil.herokuapp.com/" class="btn btn-outline-white btn-lg">Sé parte de la versión beta
                 <i class="fas fa-graduation-cap ml-2"></i>
               </a>
             </div>
@@ -664,7 +664,7 @@
     <!--Call to action-->
     <div class="pt-4">
       
-      <a  href="https://cursos-guss.herokuapp.com/" class="btn btn-outline-white btn-lg">Sé parte de la versión beta
+      <a  href="https://cursosmovil.herokuapp.com/" class="btn btn-outline-white btn-lg">Sé parte de la versión beta
         <i class="fas fa-graduation-cap ml-2"></i>
       </a>
     </div>
