--- a/titny.html
+++ b/titny.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <script src='https://cdn.tiny.cloud/1/j3kn1iwg9ehjsl11a7mu47r1s1yoy1zpr5owvfyhmbbjqopc/tinymce/5/tinymce.min.js'
         referrerpolicy="origin">
         </script>
