--- a/titny.html
+++ b/titny.html
@@ -32,16 +32,14 @@
         
         tinymce.init({
   selector: 'textarea#full-featured-non-premium',
-  plugins: 'print preview paste importcss searchreplace autolink autosave save directionality code visualblocks visualchars fullscreen image link media template codesample table charmap hr pagebreak nonbreaking anchor toc insertdatetime advlist lists wordcount imagetools textpattern noneditable help charmap quickbars emoticons',
+  plugins: 'print preview paste importcss searchreplace autolink autosave save directionality code visualblocks visualchars fullscreen image link media template codesample table charmap hr pagebreak nonbreaking anchor toc insertdatetime advlist lists wordcount imagetools textpattern noneditable help charmap quickbars emoticons fullpage',
   imagetools_cors_hosts: ['picsum.photos'],
   menubar: 'file edit view insert format tools table help',
-  toolbar: 'undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | alignleft aligncenter alignright alignjustify | outdent indent |  numlist bullist | forecolor backcolor removeformat | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | ltr rtl',
+  toolbar: 'undo redo | bold italic underline strikethrough | fontselect fontsizeselect formatselect | alignleft aligncenter alignright alignjustify | outdent indent |  numlist bullist | forecolor backcolor removeformat | pagebreak | charmap emoticons | fullscreen  preview save print | template link anchor codesample | ltr rtl',
   toolbar_sticky: true,
-  autosave_ask_before_unload: true,
-  autosave_interval: "30s",
+  autosave_ask_before_unload: false,
   autosave_prefix: "{path}{query}-{id}-",
   autosave_restore_when_empty: false,
-  autosave_retention: "2m",
   image_advtab: true,
   content_css: [
     '//fonts.googleapis.com/css?family=Lato:300,300i,400,400i',
@@ -89,7 +87,9 @@
   quickbars_selection_toolbar: 'bold italic | quicklink h2 h3 blockquote quickimage quicktable',
   noneditable_noneditable_class: "mceNonEditable",
   toolbar_drawer: 'sliding',
-  contextmenu: "link image imagetools table",
+  contextmenu: "link image imagetools table ",
+  fontsize_formats: '8px 10px 11px 12px 14px 16px 18px 24px 36px 48px',
+  fullpage_default_font_size: "11px"
  });
     </script>
 </body>
