--- a/ave/ave.html
+++ b/ave/ave.html
@@ -13,7 +13,7 @@
 			border: 0 none;
 			padding: 0;
 			text-align: center;
-			background-color: black;
+			background-color: rgb(24, 90, 70);
 		}
 
 		#canvas {
@@ -55,10 +55,10 @@
 		#status-progress {
 			width: 366px;
 			height: 7px;
-			background-color: #38363A;
-			border: 1px solid #444246;
+			background-color: rgb(152, 148, 214);
+			border: 1px solid #260547;
 			padding: 1px;
-			box-shadow: 0 0 2px 1px #1B1C22;
+			box-shadow: 0 0 2px 1px rgb(59, 66, 110);
 			border-radius: 2px;
 			visibility: visible;
 		}
@@ -74,10 +74,10 @@
 			width: 0;
 			box-sizing: border-box;
 			transition: width 0.5s linear;
-			background-color: #202020;
-			border: 1px solid #222223;
-			box-shadow: 0 0 1px 1px #27282E;
-			border-radius: 3px;
+			background-color: #2a8849;
+			border: 1px solid #d5d5e2;
+			box-shadow: 0 0 1px 1px rgb(117, 122, 153);
+			border-radius: 10px;
 		}
 
 		#status-indeterminate {
