--- a/ave/ave.html
+++ b/ave/ave.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html xmlns='http://www.w3.org/1999/xhtml' lang='' xml:lang=''>
+
 <head>
 	<meta charset='utf-8' />
 	<meta name='viewport' content='width=device-width, user-scalable=no' />
 	<link id='-gd-engine-icon' rel='icon' type='image/png' href='favicon.png' />
 	<title></title>
 	<style type='text/css'>
-
 		body {
-			touch-action: none;
+			/* touch-action: none; */
 			margin: 0;
-			border: 0 none;
+			/* border: 0 none; */
 			padding: 0;
 			text-align: center;
 			background-color: black;
@@ -85,7 +85,7 @@
 			position: relative;
 		}
 
-		#status-indeterminate > div {
+		#status-indeterminate>div {
 			width: 4.5px;
 			height: 0;
 			border-style: solid;
@@ -95,14 +95,37 @@
 			position: absolute;
 		}
 
-		#status-indeterminate > div:nth-child(1) { transform: rotate( 22.5deg); }
-		#status-indeterminate > div:nth-child(2) { transform: rotate( 67.5deg); }
-		#status-indeterminate > div:nth-child(3) { transform: rotate(112.5deg); }
-		#status-indeterminate > div:nth-child(4) { transform: rotate(157.5deg); }
-		#status-indeterminate > div:nth-child(5) { transform: rotate(202.5deg); }
-		#status-indeterminate > div:nth-child(6) { transform: rotate(247.5deg); }
-		#status-indeterminate > div:nth-child(7) { transform: rotate(292.5deg); }
-		#status-indeterminate > div:nth-child(8) { transform: rotate(337.5deg); }
+		#status-indeterminate>div:nth-child(1) {
+			transform: rotate(22.5deg);
+		}
+
+		#status-indeterminate>div:nth-child(2) {
+			transform: rotate(67.5deg);
+		}
+
+		#status-indeterminate>div:nth-child(3) {
+			transform: rotate(112.5deg);
+		}
+
+		#status-indeterminate>div:nth-child(4) {
+			transform: rotate(157.5deg);
+		}
+
+		#status-indeterminate>div:nth-child(5) {
+			transform: rotate(202.5deg);
+		}
+
+		#status-indeterminate>div:nth-child(6) {
+			transform: rotate(247.5deg);
+		}
+
+		#status-indeterminate>div:nth-child(7) {
+			transform: rotate(292.5deg);
+		}
+
+		#status-indeterminate>div:nth-child(8) {
+			transform: rotate(337.5deg);
+		}
 
 		#status-notice {
 			margin: 0 100px;
@@ -114,13 +137,17 @@
 	</style>
 
 </head>
-<body>
+
+<body id="body">
+	<button onclick="pantallaCompleta()">click</button>
 	<canvas id='canvas'>
 		HTML5 canvas appears to be unsupported in the current browser.<br />
 		Please try updating or use a different browser.
 	</canvas>
 	<div id='status'>
-		<div id='status-progress' style='display: none;' oncontextmenu='event.preventDefault();'><div id ='status-progress-inner'></div></div>
+		<div id='status-progress' style='display: none;' oncontextmenu='event.preventDefault();'>
+			<div id='status-progress-inner'></div>
+		</div>
 		<div id='status-indeterminate' style='display: none;' oncontextmenu='event.preventDefault();'>
 			<div></div>
 			<div></div>
@@ -135,13 +162,35 @@
 	</div>
 
 	<script type='text/javascript' src='ave.js'></script>
+	<script>
+		function pantallaCompleta() {
+			var elem = document.getElementById("body");
+			
+			if (document.fullscreenElement) {
+				document.exitFullscreen()
+			} else {
+				document.documentElement.requestFullscreen()
+			}
+
+			/* if (elem.requestFullscreen) {
+				elem.requestFullscreen();
+			} */
+			/* if (elem.fullscreenElement != null){
+				exitFullscreen()
+			} */
+			console.log(elem)
+			/* if (elem.fullscreenEnabled ) {
+				alert("esta en pantalla completa")
+			} */
+		}
+	</script>
 	<script type='text/javascript'>//<![CDATA[
 
 		var engine = new Engine;
 		var setStatusMode;
 		var setStatusNotice;
 
-		(function() {
+		(function () {
 
 			const EXECUTABLE_NAME = 'ave';
 			const MAIN_PACK = 'ave.pck';
@@ -182,7 +231,7 @@
 				[statusProgress, statusIndeterminate, statusNotice].forEach(elem => {
 					elem.style.display = 'none';
 				});
-				animationCallbacks = animationCallbacks.filter(function(value) {
+				animationCallbacks = animationCallbacks.filter(function (value) {
 					return (value != animateStatusIndeterminate);
 				});
 				switch (mode) {
@@ -230,7 +279,7 @@
 			engine.setProgressFunc((current, total) => {
 
 				if (total > 0) {
-					statusProgressInner.style.width = current/total * 100 + '%';
+					statusProgressInner.style.width = current / total * 100 + '%';
 					setStatusMode('progress');
 					if (current === total) {
 						// wait for progress bar animation
@@ -264,5 +313,5 @@
 		})();
 	//]]></script>
 </body>
-</html>
 
+</html>
