--- a/ave2/index.html
+++ b/ave2/index.html
@@ -115,7 +115,9 @@
 
 </head>
 <body>
-	<button onclick="pantallaCompleta()">click</button>
+	<button
+	style="position: fixed;"
+	onclick="pantallaCompleta()">click</button>
 	<script>
 		function pantallaCompleta() {
 			var elem = document.getElementById("body");
