--- a/ave2/index.html
+++ b/ave2/index.html
@@ -117,7 +117,7 @@
 <body>
 	<button
 	style="position: fixed;"
-	onclick="pantallaCompleta()">click</button>
+	onclick="pantallaCompleta()">Pantalla Completa</button>
 	<script>
 		function pantallaCompleta() {
 			var elem = document.getElementById("body");
