--- a/ave2/index.html
+++ b/ave2/index.html
@@ -116,8 +116,8 @@
 </head>
 <body>
 	<button
-	style="position: fixed;"
-	onclick="pantallaCompleta()">Pantalla Completa</button>
+	style="position: fixed; right: 0px;"
+	onclick="pantallaCompleta()">Pantalla <br> Completa</button>
 	<script>
 		function pantallaCompleta() {
 			var elem = document.getElementById("body");
